<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BTCDroid Free</string>
    <string name="app_name_subtitle">Slush\'s Pool Monitor</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_reset">Reset</string>
    <string name="action_accept">Accept</string>
    <string name="action_add_pool">Add Pool</string>
    <string name="action_settings">Settings</string>
    <string name="action_customize">Customize</string>
    <string name="action_donate">Donate</string>
    <string name="action_buy">Buy App</string>
    <string name="action_participants">Participants</string>
    <string name="action_email">Email me</string>
    <string name="th_per_second">TH/s</string>
    <string name="gh_per_second">GH/s</string>
    <string name="mh_per_second">MH/s</string>
    <string name="btc">BTC</string>
    <string name="mbtc">mBTC</string>
    <string name="ubtc">µBTC</string>
    <string name="btc_short"></string>
    <string name="mbtc_short">m</string>
    <string name="ubtc_short">µ</string>
    <string name="percent_sign">%</string>
    <string name="BitStamp_short">BitStamp</string>
    <string name="MtGox_short">MtGox</string>
    <string name="BTCe_short">BTC-e</string>
    <string name="CoinDesk_short">CoinDesk</string>
    <string name="BitStamp">BitStamp (USD)</string>
    <string name="MtGoxUsd">MtGox (USD)</string>
    <string name="MtGoxEur">MtGox (EUR)</string>
    <string name="BTCeUsd">BTC-e (USD)</string>
    <string name="BTCeEur">BTC-e (EUR)</string>
    <string name="CoinDeskUsd">CoinDesk (USD)</string>
    <string name="CoinDeskEur">CoinDesk (EUR)</string>
    <string name="CoinDeskGbp">CoinDesk (GBP)</string>

    <!-- Notification -->
    <string name="txt_hashrate_dropped_title">Hashrate has dropped!</string>
    <string name="txt_hashrate_dropped_message">Current Hashrate: %1$s</string>
    <string name="txt_new_round_title">Success!</string>
    <string name="txt_new_round_message">A new Round has begun</string>

    <!-- MainActivity -->
    <string name="txt_no_token">No valid Token found, please set one</string>
    <string name="txt_set_token">Set Token</string>
    <string name="alert_set_token_title">Slush\'s Pool Token</string>
    <string name="alert_set_token_message">.) Login at mining.bitcoin.cz\n.) Manage API tokens\n.) Your current token\n\nHint: Open Website on your Phone to Copy &amp; Paste the Token</string>
    <string name="alert_set_token_ok">Set Token</string>
    <string name="alert_set_token_cancel">Cancel</string>
    <string name="txt_viewpager_payout_fragment">Payout</string>
    <string name="txt_viewpager_pool_fragment">Pool Data</string>
    <string name="txt_viewpager_worker_fragment">Worker</string>
    <string name="txt_viewpager_round_fragment">Rounds</string>
    <string name="mail_address">developer@eiabea.com</string>
    <string name="mail_subject">BTCDroid</string>
    <string name="mail_intent_title">Send Email&#8230;</string>

    <!-- PayoutFragment -->
    <string name="txt_progress">Progress</string>
    <string name="txt_send_threshold">send threshold</string>
    <string name="txt_estimated_reward">estimated</string>
    <string name="txt_confirmed_reward">confirmed</string>
    <string name="txt_rewards">Rewards</string>

    <!-- PoolFragment | Headers -->
    <string name="txt_hashrates">Hashrates</string>
    <string name="txt_round">Round</string>
    <string name="txt_luck">Luck</string>

    <!-- PoolFragment | left -->
    <string name="txt_one_btc_is">1 BTC is:</string>
    <string name="txt_total_reward">total</string>
    <string name="txt_current_total_hashrate">total current</string>
    <string name="txt_average_total_hashrate">total average</string>
    <string name="txt_round_started">started</string>
    <string name="txt_round_duration">current</string>
    <string name="txt_round_estimated">worst case</string>
    <string name="txt_round_average">average</string>
    <string name="txt_avg_luck">Ø</string>
    <string name="txt_luck_24h">24h</string>
    <string name="txt_luck_7d">7d</string>
    <string name="txt_luck_30d">30d</string>
    <string name="txt_greater_one_day">> 1 day</string>
    <string name="txt_infinite_symbol">∞</string>

    <!-- RoundFragment | BlockView -->
    <string name="txt_confirmations_left">Confirmations left:</string>
    <string name="txt_block_found">Block found:</string>
    <string name="txt_block_started">Block started:</string>
    <string name="txt_not_available">n.A.</string>

    <!-- WorkerFragment | WorkerView -->
    <string name="txt_score">Score:</string>
    <string name="txt_last_share">Last Share:</string>
    <string name="txt_hashrate">Hashrate:</string>
    <string name="txt_shares">Shares:</string>
    <string name="txt_inactive">inactive</string>

    <!-- PrefsActivity -->
    <string name="txt_settings">Settings</string>

    <!-- ParticipantsActivity -->
    <string name="txt_manuel_zangl">Manuel Zangl</string>
    <string name="txt_development">Development</string>
    <string name="txt_florian_grau">Florian Grau</string>
    <string name="txt_design">Design / Appicon</string>
    <string name="txt_bas_de_jong">Bas de Jong</string>
    <string name="txt_translate_dutch">Dutch Translator</string>
    <string name="txt_show_qr_code">Show QR-Code</string>
    <string name="txt_donations">Donations</string>
    <string name="txt_donations_address">14PYNtWh1eKS5wL3so7yTeHdQVbvEuduK1</string>
    <string name="txt_copied_to_clipboard">copied to clipboard</string>

    <!-- RoundsListAdapter -->
    <string name="txt_confirmed">none</string>

    <!-- PreferencesFragment -->
    <string name="txt_pref_api_title">API</string>
    <string name="txt_pref_api_token_title">API Token</string>
    <string name="txt_pref_api_token_message">Set the Slush\'s Pool Token</string>
    <string name="txt_pref_thresholds_title">Thresholds</string>
    <string name="txt_pref_thresholds_price_title">Price Threshold (minutes)</string>
    <string name="txt_pref_thresholds_price_message">Set the Threshold for reloading price</string>
    <string name="txt_pref_thresholds_luck_title">Luck Threshold (minutes)</string>
    <string name="txt_pref_thresholds_luck_message">Set the Threshold for reloading lucks</string>
    <string name="txt_pref_price_title">Price</string>
    <string name="txt_pref_price_show_price_title">Show Price</string>
    <string name="txt_pref_price_show_price_message">Show the Price of 1 BTC</string>
    <string name="txt_pref_price_price_source_title">Price Source</string>
    <string name="txt_pref_price_price_source_message">Where to get the Priceinformation</string>
    <string name="txt_pref_style_title">Style</string>
    <string name="txt_pref_style_btc_style_title">BTC Style</string>
    <string name="txt_pref_style_btc_style_message">Switch the style the values are formated</string>
    <string name="txt_pref_style_worker_username_title">Worker Name Style</string>
    <string name="txt_pref_style_worker_username_message">Show username in front of workername</string>
    <string name="txt_pref_update_title">Updates</string>
    <string name="txt_pref_update_checking_interval_title">Checking Interval (minutes)</string>
    <string name="txt_pref_update_checking_interval_message">How often should the data be updated (Widgets, Notifications,&#8230;)</string>
    <string name="txt_pref_notification_title">Notification</string>
    <string name="txt_pref_notification_show_notification_title">Notification</string>
    <string name="txt_pref_notification_show_notification_message">Notification if hashrate drops under a certain value</string>
    <string name="txt_pref_notification_show_round_finished_notification_title">New Round Notification</string>
    <string name="txt_pref_notification_show_round_finished_notification_message">Notification if a block has been found</string>
    <string name="txt_pref_notification_minimum_hashrate_title">Minimum Hashrate (MH/s)</string>
    <string name="txt_pref_notification_minimum_hashrate_message">Limit for low hashrate</string>
    <string name="txt_pref_notification_checking_interval_title">Checking Interval (minutes)</string>
    <string name="txt_pref_notification_checking_interval_message">How often should the hashrate be checked</string>
    <string name="txt_pref_notification_sound_title">Sound</string>
    <string name="txt_pref_notification_sound_message">Play Notificationsound</string>
    <string name="txt_pref_notification_vibrate_title">Vibrate</string>
    <string name="txt_pref_notification_vibrate_message">Vibrate on Notification</string>
    <string name="txt_pref_notification_led_title">LED</string>
    <string name="txt_pref_notification_led_message">Flash LED on Notification</string>

    <!-- DashClock -->
    <string name="txt_dashclock_description">Displays the current total hashrate of your workers at slush\'s pool</string>
    <string name="txt_dashclock_expanded_body">total current hashrate</string>

    <!-- Widget -->
    <string name="txt_loading">loading</string>
    <string name="txt_round_duration_widget">round duration</string>

    <!-- Donate -->
    <string name="txt_donate_dialog_title">Donate</string>
    <string name="txt_donate_copy_bitcoin_address">Copy Bitcoinaddress</string>
    <string name="txt_donate_open_bitcoin_wallet">Open Bitcoinwallet</string>
    <string name="toast_donate_no_bitcoin_wallet_found">No Bitcoinwallet found</string>

    <string-array name="price_source">
        <item>@string/BitStamp</item>
        <item>@string/BTCeUsd</item>
        <item>@string/BTCeEur</item>
        <item>@string/CoinDeskUsd</item>
        <item>@string/CoinDeskEur</item>
        <item>@string/CoinDeskGbp</item>
    </string-array>
    <string-array name="price_source_values">
        <item>0</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="btc_style">
        <item>@string/btc</item>
        <item>@string/mbtc</item>
        <item>@string/ubtc</item>
    </string-array>
    <string-array name="btc_style_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="update_interval">
        <item>Manual</item>
        <item>30 Minutes</item>
        <item>1 Hours</item>
        <item>3 Hours</item>
    </string-array>
    <string-array name="update_interval_values">
        <item>0</item>
        <item>1800</item>
        <item>3600</item>
        <item>10800</item>
    </string-array>

    <string name="toast_error_loading_profile">Error loading Profile</string>
    <string name="toast_error_loading_stats">Error loading Stats</string>
    <string name="toast_error_loading_price">Error loading Price</string>

    <item name="is_land" type="bool">false</item>
    <item name="is_tablet" type="bool">false</item>

</resources>