<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:btcdroid="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/action_refresh"
        android:visible="false"
        btcdroid:showAsAction="always"/>
    <!-- 
    <item
        android:id="@+id/action_add_pool"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/action_add_pool"
        btcdroid:showAsAction="always"/>
    -->
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_participants"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_participants"/>
    <item
        android:id="@+id/action_email"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_email"/>

</menu>