<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/ll_main_info_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/card_content_padding_bottom"
        android:paddingLeft="@dimen/card_content_padding_left"
        android:paddingRight="@dimen/card_content_padding_right"
        android:paddingTop="@dimen/card_content_padding_top" >

        <LinearLayout
            style="@style/style_worker_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/style_worker_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/txt_score" />

            <TextView
                android:id="@+id/txt_worker_score"
                style="@style/style_worker_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            style="@style/style_worker_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/style_worker_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/txt_last_share" />

            <TextView
                android:id="@+id/txt_worker_last_share"
                style="@style/style_worker_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right" />
        </LinearLayout>

        <LinearLayout
            style="@style/style_worker_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/style_worker_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/txt_hashrate" />

            <TextView
                android:id="@+id/txt_worker_hashrate"
                style="@style/style_worker_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right" />
        </LinearLayout>

        <LinearLayout
            style="@style/style_worker_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/style_worker_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/txt_shares" />

            <TextView
                android:id="@+id/txt_worker_shares"
                style="@style/style_worker_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_spacing_half"
        android:background="@color/bd_background" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/bd_card_bottom_line" >
        </FrameLayout>
    </FrameLayout>

</LinearLayout>